fix font colour on events.page for better contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -621,8 +621,9 @@ input[type=submit]:hover {
   bottom: 8px;
   right: 0px;
   font-size: 1.5rem;
+  font-weight: bold;
   background-color: #e4572e;
-  color: #fffafa;
+  color: #ffffff;
 }
 
 /*modal content for booking a place on events.html page  -- start*/
